terraform-best-practices/aws/ecs/terraform/validate-ecs-containers-nonprivileged/terraform-module/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../validate-ecs-containers-nonprivileged.yaml --payload good-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: validate-ecs-containers-nonprivileged
                rules:
                - rule:
                    name: validate-ecs-containers-nonprivileged.yaml
                  error: ~
                  violations: ~
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../validate-ecs-containers-nonprivileged.yaml --payload bad-payload.json --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: validate-ecs-containers-nonprivileged
                rules:
                - rule:
                    name: validate-ecs-containers-nonprivileged
                  error: ~
                  violations:
                  - message: Containers `privileged` must be set to `false`.
                    errors:
                    - type: FieldValueInvalid
                      # value: bridge 
                      detail: 'Expected value: false, Actual value: bridge'
